--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "ArshZilpe <ArshZilpe@users.noreply.github.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@sendgrid/mail": "^7.2.3",
+    "axios": "^0.19.2",
+    "netlify-cli": "^2.59.1"
+  }
 }
